cmake_minimum_required(VERSION 3.11)

# Detect if being bundled via sub-directory.
if(NOT DEFINED PROJECT_NAME)
  set(USE_SIGNALFD_NOT_SUBPROJECT ON)
endif()

project(use_signalfd CXX)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

if(USE_SIGNALFD_NOT_SUBPROJECT)
  set(ROOT_DIR ${CMAKE_SOURCE_DIR})
  set(DEPS_SOURCE_DIR ${ROOT_DIR}/build/deps)
  set(DEPS_DEPLOY_DIR ${CMAKE_BINARY_DIR})
endif()

set(USE_SIGNALFD_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(USE_SIGNALFD_DEPS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/deps)
set(USE_SIGNALFD_CMAKE_DIR ${USE_SIGNALFD_DIR}/cmake)

include(FetchContent)
set(FETCHCONTENT_BASE_DIR ${DEPS_DEPLOY_DIR})

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(${USE_SIGNALFD_CMAKE_DIR}/CompilerUnix.cmake)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_subdirectory(src)
